--- a/style.css
+++ b/style.css
@@ -2,17 +2,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: calibri;
+    font-family: 'calibri', sans-serif;
 }
 
 /*CSS FOR BOTH MOBILE AND DESKTOP*/
 
 /*Temporary css for PROGRAM PAGE*/
-
-#program-alert {
-    text-align: center;
-    min-height: 59vh;
-}
 
 html {
     height: 100%;
@@ -46,11 +41,12 @@ body {
 .content-container {
     max-width: 1350px;
     margin: 30px auto 0 auto;
+    min-height: 100%;
 }
 
 .frame {
     background-image: url(bg2.jpg);
-    height: 500px;
+    height: 440px;
     width: 90%;
     margin: auto;
     background-size: cover;
@@ -69,6 +65,7 @@ body {
     text-align: center;
     color: #2a2a2a;
     margin-bottom: .2em;
+    padding-top: .5em;
 }
 
 .frame .sub-title {
@@ -98,33 +95,132 @@ body {
     font-size: .5em;
 }
 
-#uclan{
+#uclan {
     width: 140px;
 }
-#eur{
+
+#eur {
     width: 240px;
 }
-#nic{
+
+#nic {
     width: 140px;
 }
 
+.cnt {
+    height: 250px;
+    margin: 0px 0px 20px 20px;
+    box-shadow: 5px 5px 13px rgba(0, 0, 0, 0.5);
+}
 
+.cnt .mySlides {
+    height: 100%;
+}
+
+.cnt .left-btn {
+    position: relative;
+    top: -140px;
+}
+
+.cnt .right-btn {
+    float: right;
+    position: relative;
+    top: -140px;
+}
+
+.cnt .right-btn,
+.left-btn {
+    padding: 10px 15px;
+    color: aliceblue;
+    background: #C61B3D;
+    border: 0;
+    outline: 0;
+    cursor: pointer;
+}
 
 .container {
-    height: auto;
+    overflow: auto;
     width: 90%;
-    margin: 60px auto 100px auto;
+    margin: 40px auto 100px auto;
+    padding-bottom: 229px;
 }
 
 .container .introduction {
     margin-bottom: 20px;
     text-align: justify;
     font-size: 1.2em;
-    line-height: 1.3;
-    color: #4a4a4a;
+    line-height: 1.5;
+    color: #2e2e2e;
+}
+
+.images-group {
+    margin: 0 auto;
+    height: 200px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.images-group a {
+    margin: 0 auto;
+    padding: 0;
+    display: flex;
+    margin: 0 10px;
+
+}
+
+.images-group * {
+    height: 100%;
+    width: 100%;
+
+}
+
+.photos-title {
+    font-family: 'Lobster', cursive;
+    font-size: 2em;
+}
+
+.container ul {
+    padding-left: 60px;
+    text-align: left;
+}
+
+.container #center {
+    text-align: center;
+    color: #2a2a2a;
+}
+
+.container .more-btn {
+    display: inline-block;
+    font-size: .9em;
+    text-decoration: none;
+    padding: 5px;
+    background: #c41d3e;
+    color: aliceblue;
+    border-radius: 2px;
+    border: 1px solid #c41d3e;
+    margin-top: 15px;
+}
+
+.container .more-btn:hover {
+    -webkit-transition: all .3s ease-in-out;
+    -moz-transition: all .3s ease-in-out;
+    -ms-transition: all .3s ease-in-out;
+    -o-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
+    color: #c41d3e;
+    background: white;
+    border: 1px solid #c41d3e;
+}
+
+.container #not-jus {
+    text-align: left;
 }
 
 .footer {
+    position: relative;
+    margin-top: -229px;
     width: 100%;
     height: auto;
     background-image: url(bg4.jpg);
@@ -229,6 +325,7 @@ body {
         -ms-transition: all .3s ease-in-out;
         -o-transition: all .3s ease-in-out;
         transition: all .3s ease-in-out;
+        font-family: calibri;
     }
 
     .top-nav .active-link {
@@ -261,12 +358,12 @@ body {
     }
 
     .top-nav .dropdown li a {
-        padding: .7em;
+        padding: .4em 0 .8em .9em;
     }
 
     .top-nav .dropdown {
         display: none;
-        width: 220px;
+        width: 285px;
         position: absolute;
         z-index: 10;
         background-color: #ffffff;
@@ -274,14 +371,22 @@ body {
         flex-direction: column;
         border-radius: 0px 0 5px 5px;
         cursor: pointer;
+        border-left: 1px solid #d0d0d0;
     }
 
     .top-nav .dropdown li a {
         border-bottom: 1px solid #d6d6d6;
+        font-size: 1.1em;
     }
 
     .top-nav .dropdown li:first-child {
         border-top: 1px solid #d6d6d6;
+        padding: .1em 0;
+    }
+
+    .cnt {
+        max-width: 500px;
+        float: right;
     }
 
 }
@@ -338,7 +443,8 @@ body {
         border-bottom: 4px solid transparent;
     }
 
-    .top-nav .active-dropdown a, .top-nav .active-link a {
+    .top-nav .active-dropdown a,
+    .top-nav .active-link a {
         color: #C61B3D;
     }
 
@@ -393,6 +499,15 @@ body {
         transform: translateY(-2px) rotate(-90deg);
     }
 
+    .cnt {
+        float: right;
+        max-width: 400px;
+    }
+
+    .images-group {}
+
+
+
 }
 
 /*END OF CSS FOR MOBILES/TABLES ONLY*/
@@ -403,6 +518,19 @@ body {
         font-size: 3em;
         width: 90%;
     }
+
+    .cnt {
+        max-width: 1000px;
+        margin: 0 auto;
+        margin-bottom: 40px;
+        float: none;
+    }
+
+    .images-group * {
+        height: 90%;
+        width: 90%;
+    }
+
 }
 
 @media screen and (max-width: 665px) {
@@ -420,8 +548,19 @@ body {
     .footer span {
         font-size: 2.3em;
     }
-}
 
+    .images-group {
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+
+    }
+
+    .images-group * {
+        margin: 0 auto;
+        margin-bottom: 15px;
+    }
+}
 
 @media screen and (max-width: 567px) {
 
@@ -436,6 +575,16 @@ body {
     .footer span {
         font-size: 2.1em;
     }
+
+    .cnt {
+        height: 180px;
+    }
+
+    .cnt .right-btn,
+    .cnt .left-btn {
+        top: -105px;
+    }
+
 
 }
 
@@ -465,6 +614,7 @@ body {
     .footer .copyright {
         font-size: .9em;
     }
+
 }
 
 
